<resources>
    <string name="app_name">Hayaemon</string>
    <string name="playlist">Playlist</string>
    <string name="loop">Loop</string>
    <string name="control">Control</string>
    <string name="equalizer">Equalizer</string>
    <string name="effect">Effect</string>
    <string name="off">Off</string>
    <string name="random">Random</string>
    <string name="vocalCancel">Vocal Cancel</string>
    <string name="monoral">Monoral</string>
    <string name="leftOnly">Left Only</string>
    <string name="rightOnly">Right Only</string>
    <string name="leftAndRightReplace">Left and Right Replace</string>
    <string name="doubling">Doubling echo</string>
    <string name="transcribeSideGuitar">Transcribe Side Guitar</string>
    <string name="transcribeBassOctave">Transcribe Bass (Octave up)</string>
    <string name="pan">Pan</string>
    <string name="newPan">New pan</string>
    <string name="panTemplate">Pan template</string>
    <string name="panL100">Left 100%</string>
    <string name="panR100">Right 100%</string>
    <string name="panL75">Left 75%</string>
    <string name="panR75">Right 75%</string>
    <string name="panL50">Left 50%</string>
    <string name="panR50">Right 50%</string>
    <string name="panL25">Left 25%</string>
    <string name="panR25">Right 25%</string>
    <string name="normalize">Normalize</string>
    <string name="comp">Compressor</string>
    <string name="newComp">New compressor</string>
    <string name="compTemplate">Compressor template</string>
    <string name="gain">Gain (dB)</string>
    <string name="threshold">Threshold (dB)</string>
    <string name="ratio">Ratio</string>
    <string name="attack">Attack (ms)</string>
    <string name="release">Release (ms)</string>
    <string name="freq">Frequency</string>
    <string name="newFreq">New frequency</string>
    <string name="freqTemplate">Frequency template</string>
    <string name="freq50">50%</string>
    <string name="freq60">60%</string>
    <string name="freq70">70%</string>
    <string name="freq80">80%</string>
    <string name="freq90">90%</string>
    <string name="freq125">125%</string>
    <string name="freq150">150%</string>
    <string name="freq175">175%</string>
    <string name="freq200">200%</string>
    <string name="phaseReversal">Phase Reversal</string>
    <string name="echo">Echo</string>
    <string name="newEcho">New echo</string>
    <string name="echoTemplate">Echo template</string>
    <string name="studium">Stadium</string>
    <string name="hall">Hall</string>
    <string name="livehouse">Live house</string>
    <string name="room">Room</string>
    <string name="vocal">Vocal</string>
    <string name="mountain">Moutain</string>
    <string name="echoDry">Dry mix</string>
    <string name="echoWet">Wet mix</string>
    <string name="echoFeedback">Feedback</string>
    <string name="echoDelay">Delay (sec.)</string>
    <string name="reverb">Reverb</string>
    <string name="newReverb">New reverb</string>
    <string name="reverbTemplate">Reverb template</string>
    <string name="bathroom">Bathroom</string>
    <string name="smallRoom">Small room</string>
    <string name="mediumRoom">Medium room</string>
    <string name="largeRoom">Large room</string>
    <string name="concertHall">Concert hall</string>
    <string name="church">Church</string>
    <string name="cathedral">Cathedral</string>
    <string name="reverbDryMix">Dry mix</string>
    <string name="reverbWetMix">Wet mix</string>
    <string name="reverbRoomSize">Room size</string>
    <string name="reverbDamping">Damping</string>
    <string name="reverbStereoWidth">Stereo width</string>
    <string name="chorusFlanger">Chorus / Flanger</string>
    <string name="chorus">Chorus</string>
    <string name="flanger">Flanger</string>
    <string name="newChorus">New chorus</string>
    <string name="chorusTemplate">Chorus template</string>
    <string name="chorusDryMix">Dry mix</string>
    <string name="chorusWetMix">Wet mix</string>
    <string name="chorusFeedback">Feedback</string>
    <string name="chorusMinSweep">Minimum sweep</string>
    <string name="chorusMaxSweep">Maximum sweep</string>
    <string name="chorusRate">Rate</string>
    <string name="distortion">Distortion</string>
    <string name="newDistortion">New distortion</string>
    <string name="distortionTemplate">Distortion template</string>
    <string name="strong">Strong</string>
    <string name="middle">Middle</string>
    <string name="weak">Weak</string>
    <string name="distortionDrive">Drive</string>
    <string name="distortionDry">Dry mix</string>
    <string name="distortionWet">Wet mix</string>
    <string name="distortionFeedback">Feedback</string>
    <string name="distortionVolume">Volume</string>
    <string name="reverse">Reverse</string>
    <string name="increaseSpeed">Increase Speed</string>
    <string name="newIncreaseSpeed">New increase speed</string>
    <string name="decreaseSpeed">Decrease Speed</string>
    <string name="raisePitch">Raise Pitch</string>
    <string name="lowerPitch">Lower Pitch</string>
    <string name="oldRecord">Old Record</string>
    <string name="lowBattery">Low Battery</string>
    <string name="noSenseStrong">No Sense (Strong)</string>
    <string name="noSenseMiddle">No Sense (Middle)</string>
    <string name="noSenseWeak">No Sense (Weak)</string>
    <string name="earTraining">Ear Training</string>
    <string name="metronome">Metronome</string>
    <string name="newMetronome">New metronome</string>
    <string name="metronomeTemplate">Metronome template</string>
    <string name="bpm60">BPM 60</string>
    <string name="bpm70">BPM 70</string>
    <string name="bpm80">BPM 80</string>
    <string name="bpm90">BPM 90</string>
    <string name="bpm100">BPM 100</string>
    <string name="bpm110">BPM 110</string>
    <string name="bpm120">BPM 120</string>
    <string name="bpm130">BPM 130</string>
    <string name="bpm140">BPM 140</string>
    <string name="bpm150">BPM 150</string>
    <string name="bpm160">BPM 160</string>
    <string name="increase0.1Every1Sec">Increase 0.1% every 1 sec.</string>
    <string name="increase1.0Every1Sec">Increase 1.0% every 1 sec.</string>
    <string name="increase1.0EveryLoop">Increase 1.0% every loop.</string>
    <string name="soundEffect">Sound effect</string>
    <string name="eightBitSound">8-bit sound simulator</string>
    <string name="recordNoise">Record Noise</string>
    <string name="wave">Roar of Waves</string>
    <string name="rain">Rain</string>
    <string name="river">River</string>
    <string name="war">War</string>
    <string name="fire">Fire</string>
    <string name="concertVenue">Concert Hall</string>
    <string name="transcribeBass">Transcribe Bass</string>
    <string name="VocalBoost">Vocal Boost</string>
    <string name="VocalReducer">Vocal Reducer</string>
    <string name="TrebleBoostUltraStrong">Treble Boost (Ultra-strong)</string>
    <string name="TrebleBoostStrongest">Treble Boost (Strongest)</string>
    <string name="TrebleBoostStrong">Treble Boost (Strong)</string>
    <string name="TrebleBoostMiddle">Treble Boost (Middle)</string>
    <string name="TrebleBoostWeak">Treble Boost (Weak)</string>
    <string name="TrebleBoostWeakest">Treble Boost (Weakest)</string>
    <string name="MiddleBoostUltraStrong">Middle Boost (Ultra-strong)</string>
    <string name="MiddleBoostStrongest">Middle Boost (Strongest)</string>
    <string name="MiddleBoostStrong">Middle Boost (Strong)</string>
    <string name="MiddleBoostMiddle">Middle Boost (Middle)</string>
    <string name="MiddleBoostWeak">Middle Boost (Weak)</string>
    <string name="MiddleBoostWeakest">Middle Boost (Weakest)</string>
    <string name="BassBoostUltraStrong">Bass Boost (Ultra-strong)</string>
    <string name="BassBoostStrongest">Bass Boost (Strongest)</string>
    <string name="BassBoostStrong">Bass Boost (Strong)</string>
    <string name="BassBoostMiddle">Bass Boost (Middle)</string>
    <string name="BassBoostWeak">Bass Boost (Weak)</string>
    <string name="BassBoostWeakest">Bass Boost (Weakest)</string>
    <string name="TrebleCutUltraStrong">Treble Cut (Ultra-strong)</string>
    <string name="TrebleCutStrongest">Treble Cut (Strongest)</string>
    <string name="TrebleCutStrong">Treble Cut (Strong)</string>
    <string name="TrebleCutMiddle">Treble Cut (Middle)</string>
    <string name="TrebleCutWeak">Treble Cut (Weak)</string>
    <string name="TrebleCutWeakest">Treble Cut (Weakest)</string>
    <string name="MiddleCutUltraStrong">Middle Cut (Ultra-strong)</string>
    <string name="MiddleCutStrongest">Middle Cut (Strongest)</string>
    <string name="MiddleCutStrong">Middle Cut (Strong)</string>
    <string name="MiddleCutMiddle">Middle Cut (Middle)</string>
    <string name="MiddleCutWeak">Middle Cut (Weak)</string>
    <string name="MiddleCutWeakest">Middle Cut (Weakest)</string>
    <string name="BassCutUltraStrong">Bass Cut (Ultra-strong)</string>
    <string name="BassCutStrongest">Bass Cut (Strongest)</string>
    <string name="BassCutStrong">Bass Cut (Strong)</string>
    <string name="BassCutMiddle">Bass Cut (Middle)</string>
    <string name="BassCutWeak">Bass Cut (Weak)</string>
    <string name="BassCutWeakest">Bass Cut (Weakest)</string>
    <string name="Pop">Pop</string>
    <string name="Rock">Rock</string>
    <string name="Jazz">Jazz</string>
    <string name="Electronic">Electronic</string>
    <string name="Acoustic">Acoustic</string>
    <string name="Classic">Classic</string>
    <string name="Dance">Dance</string>
    <string name="RandB">R&amp;B</string>
    <string name="HipHop">Hip-Hop</string>
    <string name="Latin">Latin</string>
    <string name="Loudness">Loudness</string>
    <string name="Deep">Deep</string>
    <string name="Lounge">Lounge</string>
    <string name="Piano">Piano</string>
    <string name="SmallSpeaker">Small Speaker</string>
    <string name="Perfect">Perfect</string>
    <string name="EargasmExplosion">Eargasm Explosion</string>
    <string name="Transceiver">Transceiver</string>
    <string name="Telephone">Telephone</string>
    <string name="AMRadio">AMRadio</string>
    <string name="controlScreen">Control Screen</string>
    <string name="unknownArtist">&lt;unknown&gt;</string>
    <string name="playSetting">Play Setting</string>
    <string name="optionSetting">Option Setting</string>
    <string name="repeatAB">If you set the AB location, repeat one song.</string>
    <string name="speedRange">Display range of speed</string>
    <string name="pitchRange">Display range of pitch</string>
    <string name="snap">Snap the pointer to integer</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="reset">Reset</string>
    <string name="percent">%</string>
    <string name="range">～</string>
    <string name="sharp">♯</string>
    <string name="flat">♭</string>
    <string name="menu">Menu</string>
    <string name="playlistmenu">Playlist menu</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="forward">Forward</string>
    <string name="shuffleOff">Shuffle off</string>
    <string name="hideAdsTitle">Hide the Ads</string>
    <string name="hideAdsDescription">That can hide all ads in this app.\n\nThere are currently two ways to hide ads.</string>
    <string name="billingItem">Payment items</string>
    <string name="seaUrchinPointer">Sea Urchin Pointer</string>
    <string name="purpleSeaUrchinPointer_Short">&lt;Purple&gt;</string>
    <string name="purpleSeaUrchinPointer_Description">Elegant and pale taste with cream colored.</string>
    <string name="elegantSeaUrchinPointer_Short">&lt;Elegant&gt;</string>
    <string name="elegantSeaUrchinPointer_Desctiption">Deep and rich taste with orange colored.</string>
    <string name="purchase">Purchase</string>
    <string name="set">Set</string>
</resources>