<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFF4"
    android:clickable="true"
    android:focusable="true"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp">

    <RelativeLayout
        android:id="@+id/relativeItemTitle"
        android:background="#F9F9F9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billingItem"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_margin="12dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/btnCloseItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textColor="#007AFF"
            android:textSize="15dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>

    <View
        android:id="@+id/viewSepItem"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#BFBFBF"
        android:layout_below="@+id/relativeItemTitle"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewSepItem"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingBottom="16dp"
        >

        <TextView
            android:id="@+id/textItemHeader"
            android:background="#EFEFF4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controlScreen"
            android:textSize="13sp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <View
            android:id="@+id/viewSepItemHeader"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#BFBFBF"
            android:layout_below="@+id/textItemHeader"
            />

        <RelativeLayout
            android:id="@+id/relativeItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_below="@id/viewSepItemHeader"
            >

            <TextView
                android:id="@+id/textItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seaUrchinPointer"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="#611988"
                android:layout_marginTop="8dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                />

            <ImageView
                android:id="@+id/imgPurple"
                android:contentDescription="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/item_control_pointer_uni_murasaki"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textItem"
                />

            <TextView
                android:id="@+id/textPurpleTitle"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/purpleSeaUrchinPointer_Short"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#611988"
                android:shadowColor="#DCCAE5"
                android:shadowDx="0"
                android:shadowDy="3"
                android:shadowRadius="1"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/imgPurple"
                />

            <TextView
                android:id="@+id/textPurpleDescription"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/purpleSeaUrchinPointer_Description"
                android:fontFamily="monospace"
                android:textSize="13dp"
                android:textColor="#611988"
                android:lineSpacingExtra="10sp"
                android:shadowColor="#DCCAE5"
                android:shadowDx="0"
                android:shadowDy="3"
                android:shadowRadius="1"
                android:layout_marginBottom="14dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textPurpleTitle"
                />

            <View
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:background="@drawable/itemborder"
                android:layout_marginTop="-14dp"
                android:layout_marginBottom="-14dp"
                android:layout_alignTop="@+id/textPurpleTitle"
                android:layout_alignBottom="@id/textPurpleDescription"
                android:layout_centerHorizontal="true"
                />

            <Button
                android:id="@+id/btnPurplePurchase"
                android:layout_width="160dp"
                android:layout_height="44dp"
                android:text="@string/purchase"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:background="@drawable/itempurchase"
                android:layout_marginTop="14dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textPurpleDescription"
                />

            <Button
                android:id="@+id/btnPurpleSet"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:text="@string/set"
                android:textColor="#007AFF"
                android:visibility="gone"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/btnPurplePurchase"
                />

            <ImageView
                android:id="@+id/imgElegant"
                android:contentDescription="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/item_control_pointer_uni_bafun"
                android:layout_marginTop="8dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/btnPurpleSet"
                />

            <TextView
                android:id="@+id/textElegantTitle"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/elegantSeaUrchinPointer_Short"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#611988"
                android:shadowColor="#DCCAE5"
                android:shadowDx="0"
                android:shadowDy="3"
                android:shadowRadius="1"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/imgElegant"
                />

            <TextView
                android:id="@+id/textElegantDescription"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/elegantSeaUrchinPointer_Desctiption"
                android:fontFamily="monospace"
                android:textSize="13dp"
                android:textColor="#611988"
                android:lineSpacingExtra="10sp"
                android:shadowColor="#DCCAE5"
                android:shadowDx="0"
                android:shadowDy="3"
                android:shadowRadius="1"
                android:layout_marginBottom="14dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textElegantTitle"
                />

            <View
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:background="@drawable/itemborder"
                android:layout_marginTop="-14dp"
                android:layout_marginBottom="-14dp"
                android:layout_alignTop="@+id/textElegantTitle"
                android:layout_alignBottom="@id/textElegantDescription"
                android:layout_centerHorizontal="true"
                />

            <Button
                android:id="@+id/btnElegantPurchase"
                android:layout_width="160dp"
                android:layout_height="44dp"
                android:text="@string/purchase"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:background="@drawable/itempurchase"
                android:layout_marginTop="14dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textElegantDescription"
                />

            <Button
                android:id="@+id/btnElegantSet"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:text="@string/set"
                android:textColor="#007AFF"
                android:visibility="gone"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/btnElegantPurchase"
                />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#BFBFBF"
            android:layout_below="@+id/relativeItems"
            />

    </RelativeLayout>

    </ScrollView>

</RelativeLayout>
