<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeHideAdsScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:clickable="true"
    android:focusable="true"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp">

    <RelativeLayout
        android:id="@+id/relativeHideAdsTitle"
        android:background="#F9F9F9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/textHideAdsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hideAdsTitle"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_margin="12dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/btnCloseHideAds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textColor="#007AFF"
            android:textSize="15dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>

    <View
        android:id="@+id/viewSepHideAds"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#BFBFBF"
        android:layout_below="@+id/relativeHideAdsTitle"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewSepHideAds"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingBottom="48dp"
        >

        <TextView
            android:id="@+id/textHideAdsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hideAdsDescription"
            android:textSize="13sp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <View
            android:id="@+id/viewSepHideAdsHeader"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#BFBFBF"
            android:layout_below="@+id/textHideAdsHeader"
            />

        <RelativeLayout
            android:id="@+id/relativeHideAds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_below="@id/viewSepHideAdsHeader"
            >

        </RelativeLayout>

        <View
            android:id="@+id/viewSepHideAdsBottom"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#BFBFBF"
            android:layout_below="@+id/relativeHideAds"
            />

    </RelativeLayout>

    </ScrollView>

</RelativeLayout>
